<resources>
    <string name="app_name">FacTia Safe</string>
    <string name="logo_app">logoapp</string>
    <string name="encabezado_escanear">Factura Escaneada</string>
    <string name="selector_opcion1">Imagen</string>
    <string name="selector_opcion2">Texto</string>
    <string name="agregar_vistaescanear">Añadir</string>
    <string name="editar_vistaescanear">Editar</string>
    <string name="pdf_vistaescanear">PDF</string>
    <string name="detalles_vistaescanear">Detalles</string>
    <string name="encabezado_editarfactura">Facturas</string>
    <string name="nombre_empresa">Nombre Empresa</string>
    <string name="hint_nombre_empresa">Muestra el nombre de la empresa</string>
    <string name="num_factura">Factura N°</string>
    <string name="hint_numerofactura">N° de factura</string>
    <string name="fecha_editarfactura">Fecha</string>
    <string name="hint_fechaeditarfactura">dd/mm/aaaa</string>
    <string name="total_editarfactura">Total</string>
    <string name="hint_totaleditarfactura">$0.00</string>
    <string name="items_editarfactura">Items</string>
    <string name="hint_items_editarfactura">Muestra el listado de items</string>
    <string name="garantia_editarfactura">Garantía</string>
    <string name="fecha_inicio_editarfactura">Fecha inicio</string>
    <string name="fecha_fin_editarfactura">Fecha fin</string>
    <string name="editar_editarfactura">Editar</string>
    <string name="escanear_otra_factura">Escanear Otra Vez</string>
    <string name="detalles_editarfactura">Detalles</string>
    <string name="encabezado_ajustes">Ajustes</string>
    <string name="notificacion_ajustes">Este es un icono de notificaciones</string>
    <string name="notificaciones_ajustes2">Notificaciones y recordatorios</string>
    <string name="notificacion_ajustes3">Tiempo de antelación y alertas</string>
    <string name="descripcion_icexportar">Este es un icono para exportar</string>
    <string name="preferencias_ajustes">Preferencias de PDF/Exportar</string>
    <string name="preferencias_ajustes2">Añade fotos de los productos y tienda</string>
    <string name="seguridad_ajustes">Este es un icono de seguridad</string>
    <string name="seguridad_ajustes2">Privacidad y Seguridad</string>
    <string name="seguridad_ajustes3">Protege tus documentos y oculta información</string>
    <string name="informacion_ajustes">Este es un icono de informacion</string>
    <string name="acercade_ajustes">Acerca de</string>
    <string name="acercade_ajustes2">Versión y ID de la aplicación</string>
    <string name="btn_cache">BORRAR CACHÉ</string>
    <string name="acercade_encabezado">Acerca de</string>
    <string name="nombreapp">FacTia Safe</string>
    <string name="version_acercade">Versión</string>
    <string name="version_acercade2">1.0.0</string>
    <string name="id_acercade">ID interno</string>
    <string name="id_acercade2">APP–2025–3F8D-1A2B</string>
    <string name="cancelar_3">Cancelar</string>
    <string name="guardar_3">Guardar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seguridad">Seguridad</string>
    <string name="cifrado">Cifrado de archivos</string>
    <string name="cifrado2">Protege tus documentos con una clave</string>
    <string name="anonimizar">Anonimizar datos personales</string>
    <string name="anonimizar2">Oculta la información sensible presente en los documentos</string>
    <string name="guardar_conf">GUARDAR CONFIGURACIÓN</string>
    <string name="conf_cifrado">Configurar cifrado</string>
    <string name="contra_hint">Contraseña</string>
    <string name="confirmar_contra">Confirmar contraseña</string>
    <string name="cancelar">Cancelar</string>
    <string name="activar">Activar</string>
    <string name="total">Total ($)</string>
    <string name="fecha_emision">Fecha Emisión</string>
    <string name="items">Items</string>
    <string name="garantia">Garantía</string>
    <string name="guardar">Guardar</string>
    <string name="factura_n">Factura N°</string>
    <string name="fecha_fin">Fecha Fin</string>
    <string name="fecha_inicio">Fecha Inicio</string>
    <string name="prod_cant_pre">Producto ; Cantidad ; Precio</string>
    <string name="cerrar">cerrar</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="exportar_pdf">Exportar PDF</string>
    <string name="listo">Listo</string>
    <string name="descrip_factura">se muestra la factura</string>
    <string name="recortar">Recortar</string>
    <string name="rotar">Rotar</string>
    <string name="retomar">Retomar</string>
    <string name="ajustar">Ajustar</string>
    <string name="agregar_foto">Añadir foto</string>
    <string name="tienda">Tienda o comercio</string>
    <string name="categoria">Categoría</string>
    <string name="selecc_categoria">Selecciona una categoría para esta factura</string>
    <string name="area_agregar">Toca para añadir</string>
    <string name="clausulas">Ej: Condiciones de garantía legal, cláusulas de devolución, notas del vendedor.</string>
    <string name="compras_personales">Ninguno</string>
    <string name="ej_sucursal">p. ej. Sucursal Santa Ana</string>
    <string name="notas_extras">Notas Legales / Extras</string>
    <string name="fotografia_art">Fotografía de la factura</string>
    <string name="detalles">Detalles</string>
    <string name="agrega_foto_art">Añade una fotografía del artículo o artículos adquiridos en esta factura</string>
    <string name="foto_producto">Fotografía del producto</string>
    <string name="cache_exito">Caché de la aplicación borrado con éxito.</string>
    <string name="error_cache">Error al intentar borrar el caché.</string>
    <string name="escaneo_cancelado">Escaneo cancelado</string>
    <string name="error_escaneo">"Error al iniciar escáner: "</string>
    <string name="error2_escaneo">"Error: "</string>
    <string name="escaneo_exito">Factura escaneada exitosamente</string>
    <string name="escaneo_fallo">No se encontró la factura escaneada</string>
    <string name="eliminada">" eliminada."</string>
    <string name="error_categoria">Error al eliminar categoría.</string>
    <string name="ej_vestimenta">Ej: Vestimenta</string>
    <string name="descripcion_op">Descripción (opcional)</string>
    <string name="nueva_categoria">Añadir Nueva Categoría</string>
    <string name="anadir">Añadir</string>
    <string name="nombre_no_vacio">El nombre no puede estar vacío.</string>
    <string name="categoria_existente">Ya existe una categoría con ese nombre.</string>
    <string name="anadida">" añadida."</string>
    <string name="error_guardar_cat">Error al guardar la categoría.</string>
    <string name="editar_categoria">Editar Categoría</string>
    <string name="categoria_act">Categoría actualizada.</string>
    <string name="error_act_categoria">Error al actualizar la categoría.</string>
    <string name="id_noproporcionado">ID de factura no proporcionado</string>
    <string name="fact_no_encontrada">Factura no encontrada</string>
    <string name="factura_borrada">Factura borrada</string>
    <string name="error_borrar_factura">Error al borrar la factura</string>
    <string name="generando_pdf">Generando PDF…</string>
    <string name="pdf_guardado">"PDF guardado: "</string>
    <string name="error_generando_pdf">Error generando PDF</string>
    <string name="perm_denegado">Permiso denegado: no se puede guardar en carpeta pública.</string>
    <string name="perm_concedido">Permiso concedido. Pulse Exportar PDF nuevamente.</string>
    <string name="error_adapter">Error interno: adapter no inicializado</string>
    <string name="no_encontrado_principal">No se encontró DatosPrincipalesFragment</string>
    <string name="factura_actualizada">Factura actualizada</string>
    <string name="error_al_guardar">"Error al guardar: "</string>
    <string name="error_al_insertar_factura">Error al insertar factura</string>
    <string name="fact_creada_exito">Factura creada exitosamente</string>
    <string name="ocr_completado_confianza">"OCR completado (confianza: "</string>
    <string name="revisa_datos">⚠ El OCR no es 100% exacto. Revisa y edita los datos antes de guardar.</string>
    <string name="buscar">Buscar</string>
    <string name="acc_principal">Acción principal</string>
    <string name="entrada_manual">Entrada Manual</string>
    <string name="importar_pdf">Importar PDF</string>
    <string name="escanear">Escanear</string>
    <string name="inicio_escaneo">Iniciando escáner de documentos…</string>
    <string name="categorias">Categorías</string>
    <string name="gestion_cat">Gestión de categorías</string>
    <string name="instrucciones_cat">Selecciono el icono \'=\' para editar la categoría o pulse \'⊖\' para eliminar</string>
    <string name="listo2">LISTO</string>
    <string name="detalles_de_factura">Detalles de Factura</string>
    <string name="lista_de_items">Lista de Items</string>
    <string name="totales">Totales</string>
    <string name="subtotal">Subtotal</string>
    <string name="subtotal_cantidad">$ 0.00</string>
    <string name="impuesto_aplicado">Impuesto aplicado</string>
    <string name="impuesto_porcentaje">Impuesto (%)</string>
    <string name="impuesto_signo">Impuesto ($)</string>
    <string name="descuento_porcentaje">Descuento (%)</string>
    <string name="descuento_signo">Descuento ($)</string>
    <string name="total_final">Total Final</string>
    <string name="totalfinal_cantidad">$ 0.00</string>
    <string name="garantia_meses">Garantía (Meses)</string>
    <string name="datos_extras">Datos Extras</string>
    <string name="orden_az">A/Z</string>
    <string name="orden_recientes">Recientes</string>
    <string name="orden_antiguos">Antiguos</string>
    <string name="orden_estemes">Este mes</string>
    <string name="proximo_a_vencer">Próximo a vencer</string>
    <string name="puedes_adjfacturas">Puedes adjuntar facturas en formato PDF</string>
    <string name="icono_de_carga">Icono de carga de archivo</string>
    <string name="file_upload">File Upload</string>
    <string name="tiempo_antelacion">Tiempo de antelación y alertas</string>
    <string name="instrucc_antelacion">Establece el tiempo para recibir alertas de aquellas facturas que están por vencer</string>
    <string name="tres_dias">3 días</string>
    <string name="preferencias_de_pdf_exportar">Preferencias de PDF / Exportar</string>
    <string name="incluir_en_pdf">Incluir en PDF</string>
    <string name="incluir_productos_tiendas">Incluir Productos / Tiendas</string>
    <string name="agrega_fotospdf">Añade las fotos al PDF</string>
    <string name="almacenamiento">Almacenamiento</string>
    <string name="carpeta">Carpeta</string>
    <string name="ruta_ej">/Documents/FactiaSafe/Facturas</string>
    <string name="gestionar_catalogo">Gestione y edite el catálogo de categorías disponibles</string>
    <string name="factura_importada">Factura Importada</string>
    <string name="num_ticket">Número Ticket / Factura</string>
    <string name="impuesto">Impuesto</string>
    <string name="meses_de_garantia">Meses de Garantía</string>
    <string name="meses">Meses</string>
    <string name="importada_actualmente">Factura importada actualmente</string>
    <string name="sin_factura">Sin factura</string>
    <string name="no_factura_cargada">No hay factura cargada</string>
    <string name="indicacion_busqueda">Buscar por num. de factura, empresa o notas</string>
    <string name="no_encontro_facturas">No se encontraron facturas</string>
    <string name="thumbnail_factura">Thumbnail factura</string>
    <string name="toca_subir_foto">Toca para subir la foto de la factura</string>
    <string name="eliminar_categoria">Eliminar categoría</string>
    <string name="servicios_basicos">Servicios básicos</string>
    <string name="arrastrar_para_reordenar">Arrastrar para reordenar</string>
</resources>